Feat: novas rotas de categorias
